--- a/PostSafety/PostSafety/Storyboards/Admin.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Admin.storyboard
@@ -41,8 +41,8 @@
                                             <action selector="crossButtonTouched:" destination="vwB-jJ-aJr" eventType="touchUpInside" id="amb-NO-Gfz"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4FZ-DE-QQx">
-                                        <rect key="frame" x="15.5" y="183" width="346" height="300.5"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4FZ-DE-QQx" userLabel="Main Container">
+                                        <rect key="frame" x="15.5" y="166.5" width="346" height="333.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Post Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="orv-WO-L2O">
                                                 <rect key="frame" x="0.5" y="0.0" width="159.5" height="30"/>
@@ -50,7 +50,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HTC-Bf-Ael">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HTC-Bf-Ael" userLabel="Top Border">
                                                 <rect key="frame" x="0.0" y="38" width="328.5" height="4"/>
                                                 <color key="backgroundColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
@@ -232,7 +232,7 @@
                                     <constraint firstItem="4FZ-DE-QQx" firstAttribute="centerY" secondItem="4YX-zc-eoj" secondAttribute="centerY" id="ZB3-Ea-4Os"/>
                                     <constraint firstAttribute="trailing" secondItem="3Pc-Qq-l2j" secondAttribute="trailing" constant="8" id="ZWB-eC-DCh"/>
                                     <constraint firstItem="4FZ-DE-QQx" firstAttribute="centerX" secondItem="4YX-zc-eoj" secondAttribute="centerX" id="fyc-qb-idw"/>
-                                    <constraint firstItem="4FZ-DE-QQx" firstAttribute="height" secondItem="4YX-zc-eoj" secondAttribute="height" multiplier="0.45" id="obO-0j-mRZ"/>
+                                    <constraint firstItem="4FZ-DE-QQx" firstAttribute="height" secondItem="4YX-zc-eoj" secondAttribute="height" multiplier="0.5" id="obO-0j-mRZ"/>
                                 </constraints>
                             </view>
                         </subviews>
