--- a/PostSafety/PostSafety/Storyboards/Base.lproj/Authentication.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Base.lproj/Authentication.storyboard
@@ -517,9 +517,9 @@
                                                     </stackView>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cf8-v9-N2P" userLabel="Password Text Field">
                                                         <rect key="frame" x="56.5" y="39.5" width="208" height="18"/>
-                                                        <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="textColor" red="0.92941176470588238" green="0.42352941176470588" blue="0.1764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                                         <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="15"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
                                                                 <color key="value" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -528,9 +528,9 @@
                                                     </textField>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xfh-bS-OHb" userLabel="New Password Text Field">
                                                         <rect key="frame" x="56.5" y="116.5" width="208" height="17.5"/>
-                                                        <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="textColor" red="0.92941176470588238" green="0.42352941176470588" blue="0.1764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                                         <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="15"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
                                                                 <color key="value" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -586,7 +586,7 @@
                                             <constraint firstItem="zIk-un-qb0" firstAttribute="centerY" secondItem="wh4-3w-nl0" secondAttribute="centerY" id="zb0-Q8-Ekf"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ql6-2w-2FZ">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ql6-2w-2FZ">
                                         <rect key="frame" x="0.0" y="20" width="44" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Ql6-2w-2FZ" secondAttribute="height" id="eXv-15-ojX"/>
@@ -632,7 +632,6 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="saveChangesButtonTouched:" destination="DvF-eO-aE8" eventType="touchUpInside" id="KIF-O7-5gv"/>
-                                    <segue destination="SzT-ZZ-ulS" kind="push" id="i8L-LW-Yi3"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -666,6 +665,7 @@
                         <outlet property="confirmPasswordTextFieldContainer" destination="yYG-pa-J6h" id="LW4-Vj-Ytr"/>
                         <outlet property="passwordTextField" destination="Cf8-v9-N2P" id="pSQ-bV-lAD"/>
                         <outlet property="passwordTextFieldContainer" destination="tR5-uv-cf2" id="SAM-ex-M4u"/>
+                        <segue destination="SzT-ZZ-ulS" kind="push" identifier="NavigateToDashboardFromResetPassword" id="LDI-8r-ld0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TF8-Xm-bsF" sceneMemberID="firstResponder"/>
@@ -680,6 +680,6 @@
         <image name="logo" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ige-6g-Acy"/>
+        <segue reference="LDI-8r-ld0"/>
     </inferredMetricsTieBreakers>
 </document>
