--- a/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
@@ -1767,16 +1767,16 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="nuz-jX-Rdh">
-                                        <rect key="frame" x="24" y="67" width="240" height="145"/>
+                                        <rect key="frame" x="12" y="67" width="264" height="145"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* Make Sure you are safe" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Xw1-oQ-gHC">
-                                                <rect key="frame" x="0.0" y="0.0" width="240" height="62.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* Make Sure you are safe" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Xw1-oQ-gHC">
+                                                <rect key="frame" x="0.0" y="0.0" width="264" height="62.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* Take video and give location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="FfC-V8-0bo">
-                                                <rect key="frame" x="0.0" y="82.5" width="240" height="62.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* Take video and give location" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="FfC-V8-0bo">
+                                                <rect key="frame" x="0.0" y="82.5" width="264" height="62.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -1791,12 +1791,12 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="nuz-jX-Rdh" firstAttribute="leading" secondItem="3q4-Mf-2ts" secondAttribute="leading" constant="24" id="1uQ-I3-5yR"/>
+                                    <constraint firstItem="nuz-jX-Rdh" firstAttribute="leading" secondItem="3q4-Mf-2ts" secondAttribute="leading" constant="12" id="1uQ-I3-5yR"/>
                                     <constraint firstItem="vjy-KG-ukW" firstAttribute="leading" secondItem="3q4-Mf-2ts" secondAttribute="leading" constant="8" id="3QQ-jq-5Y6"/>
                                     <constraint firstItem="nuz-jX-Rdh" firstAttribute="top" secondItem="vjy-KG-ukW" secondAttribute="bottom" constant="24" id="4cm-eg-X2G"/>
                                     <constraint firstItem="vjy-KG-ukW" firstAttribute="top" secondItem="3q4-Mf-2ts" secondAttribute="top" constant="8" id="U0k-r9-cgR"/>
                                     <constraint firstAttribute="trailing" secondItem="vjy-KG-ukW" secondAttribute="trailing" constant="8" id="cq2-V6-QSn"/>
-                                    <constraint firstAttribute="trailing" secondItem="nuz-jX-Rdh" secondAttribute="trailing" constant="24" id="jdT-8m-g2z"/>
+                                    <constraint firstAttribute="trailing" secondItem="nuz-jX-Rdh" secondAttribute="trailing" constant="12" id="jdT-8m-g2z"/>
                                     <constraint firstItem="vjy-KG-ukW" firstAttribute="centerX" secondItem="3q4-Mf-2ts" secondAttribute="centerX" id="oG0-1I-ItH"/>
                                 </constraints>
                             </view>
